// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObsGridItem for an observation with a photo should render 1`] = `
<View
  style={
    [
      [
        {
          "maxHeight": 210,
        },
        {
          "overflow": "hidden",
        },
        {
          "position": "relative",
        },
        {
          "borderBottomLeftRadius": 15,
          "borderBottomRightRadius": 15,
          "borderTopLeftRadius": 15,
          "borderTopRightRadius": 15,
        },
        {
          "width": 200,
        },
        {
          "width": 200,
        },
      ],
    ]
  }
  testID="MyObservations.obsGridItem.00000000-0000-0000-0000-000000000000"
>
  <View
    style={
      [
        [
          {
            "flexGrow": 1,
          },
          {
            "aspectRatio": 1,
          },
          {
            "position": "relative",
          },
        ],
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "position": "absolute",
            },
            {
              "width": "100%",
            },
            {
              "height": "100%",
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            [
              {
                "flexShrink": 1,
              },
              {
                "justifyContent": "center",
              },
              {
                "alignItems": "center",
              },
              {
                "flexGrow": 1,
              },
              {
                "aspectRatio": 1,
              },
              {
                "backgroundColor": "#454545",
              },
              {
                "borderBottomWidth": 0,
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
              },
            ],
          ]
        }
        testID="IconicTaxonName.iconicTaxonIcon"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#BFBFBF33",
                "fontSize": 100,
              },
              null,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <FasterImageView
      accessibilityIgnoresInvertColors={true}
      fadeDuration={0}
      source={
        {
          "cachePolicy": "discWithCacheControl",
          "resizeMode": "cover",
          "url": "https://inaturalist-open-data.s3.amazonaws.com/photos/1/large.jpeg",
        }
      }
      style={
        [
          [
            {
              "flexGrow": 1,
            },
            {
              "aspectRatio": 1,
            },
          ],
        ]
      }
      testID="ObsList.photo"
    />
  </View>
  <BVLinearGradient
    colors={
      [
        0,
        2566914048,
      ]
    }
    endPoint={
      {
        "x": 0,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      {
        "x": 0,
        "y": 0.5,
      }
    }
    style={
      [
        [
          {
            "position": "absolute",
          },
          {
            "width": "100%",
          },
          {
            "height": "100%",
          },
        ],
      ]
    }
  />
  <View
    style={
      [
        [
          {
            "position": "absolute",
          },
          {
            "bottom": 0,
          },
          {
            "alignItems": "flex-start",
          },
          {
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          },
        ],
      ]
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      numberOfLines={1}
      style={
        [
          {
            "color": "#454545",
          },
          {
            "fontFamily": "Lato-Regular",
          },
          [
            {
              "textAlign": "left",
            },
            [
              {
                "fontSize": 17,
                "lineHeight": 20.4,
              },
              {
                "fontFamily": "Lato-Medium",
              },
              [
                {
                  "color": "#ffffff",
                },
              ],
            ],
          ],
        ]
      }
    >
      Unknown
    </Text>
  </View>
</View>
`;

exports[`ObsGridItem for an observation without a photo should render 1`] = `
<View
  style={
    [
      [
        {
          "maxHeight": 210,
        },
        {
          "overflow": "hidden",
        },
        {
          "position": "relative",
        },
        {
          "borderBottomLeftRadius": 15,
          "borderBottomRightRadius": 15,
          "borderTopLeftRadius": 15,
          "borderTopRightRadius": 15,
        },
        {
          "width": 200,
        },
        {
          "width": 200,
        },
      ],
    ]
  }
  testID="MyObservations.obsGridItem.00000000-0000-0000-0000-000000000000"
>
  <View
    style={
      [
        [
          {
            "flexGrow": 1,
          },
          {
            "aspectRatio": 1,
          },
          {
            "position": "relative",
          },
        ],
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "position": "absolute",
            },
            {
              "width": "100%",
            },
            {
              "height": "100%",
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            [
              {
                "flexShrink": 1,
              },
              {
                "justifyContent": "center",
              },
              {
                "alignItems": "center",
              },
              {
                "flexGrow": 1,
              },
              {
                "aspectRatio": 1,
              },
              {
                "backgroundColor": "#454545",
              },
              {
                "borderBottomWidth": 0,
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
              },
            ],
          ]
        }
        testID="IconicTaxonName.iconicTaxonIcon"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#BFBFBF33",
                "fontSize": 100,
              },
              null,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <BVLinearGradient
    colors={
      [
        0,
        2566914048,
      ]
    }
    endPoint={
      {
        "x": 0,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      {
        "x": 0,
        "y": 0.5,
      }
    }
    style={
      [
        [
          {
            "position": "absolute",
          },
          {
            "width": "100%",
          },
          {
            "height": "100%",
          },
        ],
      ]
    }
  />
  <View
    style={
      [
        [
          {
            "position": "absolute",
          },
          {
            "bottom": 0,
          },
          {
            "alignItems": "flex-start",
          },
          {
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          },
        ],
      ]
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      numberOfLines={1}
      style={
        [
          {
            "color": "#454545",
          },
          {
            "fontFamily": "Lato-Regular",
          },
          [
            {
              "textAlign": "left",
            },
            [
              {
                "fontSize": 17,
                "lineHeight": 20.4,
              },
              {
                "fontFamily": "Lato-Medium",
              },
              [
                {
                  "color": "#ffffff",
                },
              ],
            ],
          ],
        ]
      }
    >
      Unknown
    </Text>
  </View>
</View>
`;
